--- a/css/Footer.css
+++ b/css/Footer.css
@@ -51,9 +51,9 @@ footer ul {
 
 @media screen and (min-width: 768px) and (max-width: 991px) {
     footer {
-        width: 800px;
+        margin-left:0% ;
         margin-top: 70px;
-        margin-left: 20px;
+        justify-content: center;
     }
 
     footer ul {
