--- a/css/Header.css
+++ b/css/Header.css
@@ -3,7 +3,6 @@
 #header {
     display: flex;
     height: 102px;
-    width: 375px;
     justify-content: space-between;
     align-items: center;
 }
@@ -52,6 +51,7 @@ nav a:hover {
 
     #header img {
         height: 19px;
+        padding-left: 55PX;
     }
 
 
@@ -85,6 +85,7 @@ nav a:hover {
     #header {
         flex-direction: column;
         height: 130px;
+        width: 375px;
         margin-top: 21px;
     }
 
