--- a/css/Résultats Hébergements.css
+++ b/css/Résultats Hébergements.css
@@ -143,7 +143,6 @@ main a {
 
 .NoteRésultat {
     display: flex;
-    flex-direction: row;
     margin-bottom: 10px;
 }
 
@@ -170,15 +169,29 @@ main a {
 
 @media screen and (max-width: 991px) {
 
+    main {
+        width: auto;
+        flex-direction: column;
+    }
+
+
+    
+    #ListeHébergement {
+        justify-content: space-between;
+        padding-left: 2%;
+        padding-right: 2%;
+    }
+
     #RésultatHébergement {
         margin-top: 0;
-        width: 880px;
-       
-        margin-right: 20px;
+        margin-left: 2%;
+        margin-right: 2%;
+        width:  auto;
     }
 
     #RésultatHébergement .BlocRésHéber {
         width: 246px;
+        height: 199px;
         box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.1);
     }
 }
