--- a/css/Section Activités.css
+++ b/css/Section Activités.css
@@ -79,62 +79,49 @@
 
 @media screen and (max-width: 991px) {
     #BlocActivités {
-        width: 880px;
-        height: 300px;
-        margin-left: 20px;
-        margin-right: 20px;
-        margin-bottom: 0px;
+        height: auto;
+        margin-left: 2%;
+        margin-right: 2%;
     }
 
     #BlocRésActivités {
-        display: flex;
-        width: 800px;
+        width: 100%;
+        height: 267px;
     }
 
     .BlocActivité {
-        width: 180px;
-        height: 300px;
+        height:auto;
     }
 
     #BlocImageVieuxPort {
-        width: 100%;
-        height: 250px;
+        height: 211px;
         background-size: auto 100%;
-        background-position: center center;
-        border-radius: 20px 20px 0 0;
+
     }
 
     #BlocImagePomègues {
-        width: 100%;
-        height: 250px;
+        height: 211px;
         background-size: 100% auto;
-        background-position: center center;
-        border-radius: 20px 20px 0 0;
+
     }
 
 
     #BlocImageCalanques {
-        width: 100%;
-        height: 250px;
+        height: 211px;
         background-size: auto 100%;
-        background-position: center center;
-        border-radius: 20px 20px 0 0;
+
     }
 
 
     #BlocImageGarde {
-        width: 100%;
-        height: 250px;
+        height: 211px;
         background-size: auto 100%;
-        background-position: center center;
-        border-radius: 20px 20px 0 0;
     }
 
-    .NomRésultat {
-        display: flex;
-        justify-content: left;
-        align-items: center;
-        margin-top: 8px;
+    .NomRésultat { 
+        height: 21%;
+        padding-right: 10%;
+        padding-left: 5%;
     }
 }
 
