--- a/css/Section Search.css
+++ b/css/Section Search.css
@@ -14,17 +14,21 @@
 #Searchbar {
     display: flex;
     flex-direction: row;
-    width: 45.95%;
     height: 49px;
 }
 
 #LocLogo {
     display: flex;
     background-color: #F2F2F2;
-    width: 11.90%;
+    width: 50px;
     align-items: center;
     justify-content: center;
     border-radius: 15px 0px 0px 15px;
+}
+
+::placeholder { 
+    color: black;
+    opacity: 1;
 }
 
 form {
@@ -128,24 +132,29 @@ form {
 
     #Topsection {
         height: 305px;
-        width: 883px;
+        width: 100%;
         padding-bottom: 39px;
-        margin-right: 100px;
+    }
+
+    .Search {
+        width: auto;
+    }
+
+    form {
+        width: 50%;
     }
 
     #FiltersBar {
-        display: flex;
-        justify-content: space-around;
-        width: 730px;
+        padding-right: 70px;
+    }
+
+    #FiltersBar i {
+        padding-right: 7px;
     }
 
     .FilterButton {
-        height: 50px;
-        width: auto;
-        display: flex;
-        align-items: center;
-        padding-left: 15px;
-        margin-left: 10px;
+        margin-left: 7px;
+        padding: 4px 10px;
         font-size: 16px;
     }
 
