--- a/css/Footer.css
+++ b/css/Footer.css
@@ -70,7 +70,6 @@ footer ul {
 
 
     footer {
-        height: 500px;
         margin-left: 0;
     }
 
@@ -78,6 +77,7 @@ footer ul {
         height: 100%;
         width: 100%;
         flex-direction: column;
+        padding-bottom: 60px;
     }
 
     .List {
