--- a/css/Header.css
+++ b/css/Header.css
@@ -85,21 +85,21 @@ nav a:hover {
     #header {
         flex-direction: column;
         height: 130px;
-        width: 375px;
         margin-top: 21px;
+    }
+
+    #header img {
+        padding: 0%;
     }
 
 /* Menu Mobile*/
     
     nav {
         width: 100%;
-        justify-content: center;
         padding: 0%;
     }
 
     nav a {
-        padding: 0%;
-        width: 100%;
         justify-content: center;
         border-bottom: 3px solid #F2F2F2;
     }
