--- a/css/Résultats Hébergements.css
+++ b/css/Résultats Hébergements.css
@@ -200,10 +200,7 @@ main a {
 
 @media screen and (max-width: 767px) {
     main {
-        display: flex;
         flex-direction: column-reverse;
-        width: 100%;
-        margin-bottom: 30%;
     }
 
     
@@ -216,14 +213,14 @@ main a {
         background-color: #FFFFFF;
     }
 
-    #RésultatHébergement .Titre {
-        padding-left: 5%;
+    #ListeHébergement {
+        justify-content: space-around;
+        padding: 0%;
     }
 
     #RésultatHébergement .BlocRésHéber {
         width: 89%;
-        margin-top: 12px;
-        box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.1);
+        margin-bottom: 12px;
     }
 
 
