--- a/css/Résultats Populaires.css
+++ b/css/Résultats Populaires.css
@@ -153,14 +153,14 @@
 
 
     #RésultatPopulaires {
-        width: 375px;
-        height: auto;
         border-radius: 0 0 0 0;
         padding-top: 7%;
         padding-bottom: 8%;
+        margin-left: 0%;
     }
 
     #RésPopu {
+        flex-direction: column;
         width: 100%;
         margin: 0%;
         align-items: center;
@@ -169,12 +169,11 @@
     #RésPopu .TextePop {
         width: 55%;
         padding-right: 5%;
-        margin-left: 15px;
     }
 
     #RésultatPopulaires .BlocRésPop {
-        width: 89%;      
-        box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.1);
+        width: 89%;
+        margin-left: 0%;
     }
 
     #RésultatPopulaires .Titre {
@@ -182,13 +181,15 @@
         margin-bottom: 7%;
         padding-left: 5%;
         padding-right: 5%;
-        margin-left: 0;
     } 
 
     #RésultatPopulaires h2 {
         font-size: 16px;
     }
     
+    .PhotoBleu{
+        background-size: 100% auto;
+    }
 
     #Afficher {
         display: none;
