--- a/css/RésultatsPopulaires.css
+++ b/css/RésultatsPopulaires.css
@@ -157,6 +157,7 @@
         padding-top: 7%;
         padding-bottom: 8%;
         margin-left: 0%;
+        margin-right: 0%;
     }
 
     #RésPopu {
