--- a/css/Footer.css
+++ b/css/Footer.css
@@ -34,7 +34,7 @@ footer ul {
     flex-direction: column;
     width: 27%;
     margin-top: 45px;
-    margin-left: 5%;
+    margin-left: 70px;
     margin-bottom: 50px;
 }
 
@@ -81,9 +81,9 @@ footer ul {
     }
 
     .List {
-        margin-top: 9%;
+        margin-top: 45px;
         margin-bottom: 0;
-        margin-left: 8%;
+        margin-left: 30px;
         width: 51%;
     }
 }
