--- a/css/RésultatsPopulaires.css
+++ b/css/RésultatsPopulaires.css
@@ -8,23 +8,22 @@
     border-radius: 20px;
     margin-top: 40px;
     flex-direction: column;
-    justify-content: space-around;
-    padding-top: 1%;
+    
 }
 
 #RésPopu {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    height: 80%;
+    height: 90%;
 }
 
 #RésultatPopulaires .BlocRésPop {
     display: flex;
     justify-content: center;
-    height: 28.80%;
+    height: 144px; 
     width: 80.95%;
-    margin-left: 9.52%;
+    margin-left: 37px;
     margin-bottom: 30px;
     background-color: white;
     border-radius: 20px;
@@ -37,23 +36,25 @@
 
 #RésultatPopulaires .Titre {
     margin-left: 10px;
+    margin-top: 40px;
+    margin-bottom: 30px;
 }
 
 .Titre i {
     color: #0065FC;
 }
 
-
 .TextePop {
     display: flex;
     flex-direction: column;
-    width: 58.82%;
+    width: 169px;
     height: auto;
     justify-content: space-between;
     margin-left: 15px;
     margin-top: 10px;
-    margin-right: 20px;
+    margin-right: 10px;
 }
+
 
 
 
@@ -64,7 +65,7 @@
 
 .PhotoSoleil {
     height: 100%;
-    width: 41.18%;
+    width: 137px;
     background-image: url(/Images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg);
     background-size: auto 100%;
     background-position: center center;
@@ -75,7 +76,7 @@
 
 .PhotoEau {
     height: 100%;
-    width: 41.18%;
+    width: 137px;
     background-image: url(/Images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg);
     background-size: auto 100%;
     background-position: center center;
@@ -86,9 +87,9 @@
 
 .PhotoBleu {
     height: 100%;
-    width: 41.18%;
+    width: 137px;
     background-image: url(/Images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg);
-    background-size: auto 100%;
+    background-size: 100% 100%;
     background-position: center center;
     border-radius: 20px 0px 0px 20px;
     margin-top: 0px;
@@ -108,7 +109,7 @@
     }
 
     #RésultatPopulaires .Titre {
-        margin-top: 3%;
+        margin-top: 34px;
         margin-right: 10px;
         padding-left: 2%;
         padding-right: 2%;
@@ -117,20 +118,30 @@
     #RésPopu {
         padding-left: 2%;
         padding-right: 2%;
-        margin-top: 3%;
         flex-direction: row;
     }
 
     #RésultatPopulaires .BlocRésPop {
-        height: 150px;
+        height: 144px;
+        width: 252px;
         margin-left: 5px;
         box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.1);
     }
 
+    .PhotoSoleil {
+        width: 106px;
+    }
+
+    .PhotoEau {
+        width: 106px;
+    }
+
+
+    .PhotoBleu {
+        width: 106px;
+    }
+
     #RésPopu .TextePop {
-        margin-left: 6%;
-        margin-right: 0;
-        margin-top: 5%;
         width: 50%;
         
     }
@@ -154,8 +165,8 @@
 
     #RésultatPopulaires {
         border-radius: 0 0 0 0;
-        padding-top: 7%;
-        padding-bottom: 8%;
+        padding-top: 28px;
+        padding-bottom: 47px;
         margin-left: 0%;
         margin-right: 0%;
     }
@@ -168,8 +179,8 @@
     }
 
     #RésPopu .TextePop {
-        width: 55%;
-        padding-right: 5%;
+        width: 60%;
+        padding-right: 0%;
     }
 
     #RésultatPopulaires .BlocRésPop {
@@ -179,9 +190,9 @@
 
     #RésultatPopulaires .Titre {
         font-size: 22px;
-        margin-bottom: 7%;
-        padding-left: 5%;
-        padding-right: 5%;
+        margin-bottom: 26px;
+        padding-left: 20px;
+        padding-right: 20px;
     } 
 
     #RésultatPopulaires h2 {
