--- a/css/SectionActivités.css
+++ b/css/SectionActivités.css
@@ -71,7 +71,7 @@
     display: flex;
     height: 12%;
     align-items: center;
-    margin-left: 6%;
+    margin-left: 19px;
 }
 
 
@@ -91,37 +91,38 @@
 
     .BlocActivité {
         height:auto;
+        width: 182px;
     }
 
     #BlocImageVieuxPort {
         height: 211px;
-        background-size: auto 100%;
-
+        background-size: auto 125%;
+        background-position: 50% 0%;
     }
 
     #BlocImagePomègues {
         height: 211px;
-        background-size: 100% auto;
-
+        background-size: 125% auto;
+        background-position: 50% 40%;
     }
 
 
     #BlocImageCalanques {
         height: 211px;
-        background-size: auto 100%;
-
+        background-size: auto 125%;
+        background-position: 50% 0%;
     }
 
 
     #BlocImageGarde {
         height: 211px;
-        background-size: auto 100%;
+        background-size: auto 125%;
+        background-position: 50% 0%;
     }
 
     .NomRésultat { 
         height: 21%;
-        padding-right: 10%;
-        padding-left: 5%;
+    
     }
 }
 
@@ -129,8 +130,8 @@
 
 @media screen and (max-width: 767px) {
     #TitreActivités {
-        padding-left: 5%;
-        width: 35%;
+        padding-left: 20px;
+        width: 37%;
     }
 
     #BlocActivités {
@@ -180,8 +181,7 @@
     }
 
     .NomRésultat {
-        padding-bottom: 3%;
-        padding-top: 3%;
-        margin-left: 0%;
+        padding-bottom: 20px;
+        padding-top: 20px;
     }
 }
