--- a/css/RésultatsHébergements.css
+++ b/css/RésultatsHébergements.css
@@ -18,14 +18,12 @@ main {
 main a {
     text-decoration: none;
     color: black;
+    width: 100%;
 }
 
 
 
-
 /*Article Hébergements*/
-
-
 
 #RésultatHébergement {
     display: flex;
@@ -66,15 +64,20 @@ main a {
     margin-bottom: 50px;
 }
 
-.BlocRésHéber {
+.CardHébergements {   
     display: flex;
     width: 27.95%;
-    height: auto;
+    height: 199px;
     margin-top: 30px;
     background-color: white;
     border-radius: 20px;
-    flex-direction: column;
-    justify-content: space-around;
+}
+
+.PhotoHéberg img{
+    height: 124px;
+    object-fit: cover;
+    border-radius: 20px 20px 0px 0px;
+    border: 5px solid #FFFFFF;
 }
 
 
@@ -82,65 +85,14 @@ main a {
     display: flex;
     flex-direction: column;
     height: 75px;
-    margin-left: 16px;
-    margin-top: 5px;
-    justify-content: space-around;
+    padding-left: 16px;
+    justify-content: space-between;
 }
 
-.PhotoCanebière {
-    height: 124px;
-    background-image: url(/Images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg);
-    border-radius: 20px 20px 0px 0px;
-    background-size: 100% auto;
-    background-position: center center;
-    border: 5px solid #FFFFFF;
+.TexteHeberg h2 {
+    line-height: 19px;
 }
 
-
-.PhotoPort {
-    height: 124px;
-    background-image: url(/Images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg);
-    border-radius: 20px 20px 0px 0px;
-    background-size: 100% auto;
-    background-position: center center;
-    border: 5px solid #FFFFFF;
-}
-
-.PhotoMouettes {
-    height: 124px;
-    background-image: url(/Images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg);
-    border-radius: 20px 20px 0px 0px;
-    background-size: 100% auto;
-    background-position: center center;
-    border: 5px solid #FFFFFF;
-}
-
-.PhotoMer {
-    height: 124px;
-    background-image: url(/Images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg);
-    border-radius: 20px 20px 0px 0px;
-    background-size: 100% auto;
-    background-position: center center;
-    border: 5px solid #FFFFFF;
-}
-
-.PhotoPanier {
-    height: 124px;
-    background-image: url(/Images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg);
-    border-radius: 20px 20px 0px 0px;
-    background-size: 100% auto;
-    background-position: center center;
-    border: 5px solid #FFFFFF;
-}
-
-.PhotoAmina {
-    height: 124px;
-    background-image: url(/Images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg);
-    border-radius: 20px 20px 0px 0px;
-    background-size: 100% auto;
-    background-position: center center;
-    border: 5px solid #FFFFFF;
-}
 
 
 
@@ -180,7 +132,7 @@ main a {
     }
 
 
-
+    
     #ListeHébergement {
         justify-content: space-between;
         padding-left: 2%;
@@ -191,10 +143,10 @@ main a {
         margin-top: 0;
         margin-left: 2%;
         margin-right: 2%;
-        width: auto;
+        width:  auto;
     }
 
-    #RésultatHébergement .BlocRésHéber {
+    #RésultatHébergement .CardHébergements {
         width: 246px;
         height: 199px;
         box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.1);
@@ -208,7 +160,7 @@ main a {
         flex-direction: column-reverse;
     }
 
-
+    
     #RésultatHébergement {
         display: flex;
         height: auto;
@@ -225,12 +177,12 @@ main a {
         width: auto;
     }
 
-    #RésultatHébergement .BlocRésHéber {
+    #RésultatHébergement .CardHébergements {
         width: 89%;
         margin-bottom: 12px;
     }
 
 
-
+        
 
 }
