--- a/css/RésultatsPopulaires.css
+++ b/css/RésultatsPopulaires.css
@@ -8,28 +8,18 @@
     border-radius: 20px;
     margin-top: 40px;
     flex-direction: column;
-
+    
 }
 
 #RésPopu {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    align-items: center;
     height: 90%;
 }
 
-#RésultatPopulaires .BlocRésPop {
-    display: flex;
-    justify-content: center;
-    height: 144px;
-    width: 80.95%;
-    margin-left: 37px;
-    margin-bottom: 30px;
-    background-color: white;
-    border-radius: 20px;
-}
-
-.BlocRésPop a {
+.CardPopulaires a {
     width: 100%;
     display: flex;
 }
@@ -44,55 +34,42 @@
     color: #0065FC;
 }
 
+
+
+.CardPopulaires{
+    display: flex;
+    justify-content: center;
+    height: 144px; 
+    width: 86%;
+    margin-bottom: 30px;
+    background-color: white;
+    border-radius: 20px;
+}
+
+.PhotoPopu img {
+    width: 137px;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 20px 0px 0px 20px;
+    border: 5px solid #FFFFFF;
+}
+
 .TextePop {
     display: flex;
     flex-direction: column;
-    width: 169px;
     height: auto;
-    justify-content: space-between;
-    margin-left: 15px;
-    margin-top: 10px;
-    margin-right: 10px;
+    justify-content: space-around;
+    padding-left: 15px;
+    padding-top: 16px;
+    padding-right: 10px;
 }
-
 
 .TextePop h3 {
     margin-top: 5px;
     margin-bottom: 40px;
 }
 
-.PhotoSoleil {
-    height: 100%;
-    width: 137px;
-    background-image: url(/Images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg);
-    background-size: auto 100%;
-    background-position: center center;
-    border-radius: 20px 0px 0px 20px;
-    margin-top: 0px;
-    border: 5px solid #FFFFFF;
-}
 
-.PhotoEau {
-    height: 100%;
-    width: 137px;
-    background-image: url(/Images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg);
-    background-size: auto 100%;
-    background-position: center center;
-    border-radius: 20px 0px 0px 20px;
-    margin-top: 0px;
-    border: 5px solid #FFFFFF;
-}
-
-.PhotoBleu {
-    height: 100%;
-    width: 137px;
-    background-image: url(/Images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg);
-    background-size: 100% 100%;
-    background-position: center center;
-    border-radius: 20px 0px 0px 20px;
-    margin-top: 0px;
-    border: 5px solid #FFFFFF;
-}
 
 
 /* Bloc Populaires Tablette */
@@ -103,7 +80,7 @@
         width: auto;
         margin-left: 2%;
         margin-right: 2%;
-
+          
     }
 
     #RésultatPopulaires .Titre {
@@ -119,30 +96,18 @@
         flex-direction: row;
     }
 
-    #RésultatPopulaires .BlocRésPop {
+    #RésultatPopulaires .CardPopulaires {
         height: 144px;
         width: 252px;
         margin-left: 5px;
         box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.1);
     }
 
-    .PhotoSoleil {
-        width: 106px;
-    }
-
-    .PhotoEau {
+    .PhotoPopu img {
         width: 106px;
     }
 
 
-    .PhotoBleu {
-        width: 106px;
-    }
-
-    #RésPopu .TextePop {
-        width: 50%;
-
-    }
 
     #RésultatPopulaires h2 {
         font-size: 14px;
@@ -181,8 +146,8 @@
         padding-right: 0%;
     }
 
-    #RésultatPopulaires .BlocRésPop {
-        width: 89%;
+    #RésultatPopulaires .CardPopulaires {
+        width: 93%;
         margin-left: 0%;
     }
 
@@ -191,15 +156,12 @@
         margin-bottom: 26px;
         padding-left: 20px;
         padding-right: 20px;
-    }
+    } 
 
     #RésultatPopulaires h2 {
         font-size: 16px;
     }
 
-    .PhotoBleu {
-        background-size: 100% auto;
-    }
 
     #Afficher {
         display: none;
