--- a/css/SectionActivités.css
+++ b/css/SectionActivités.css
@@ -10,7 +10,7 @@
 
 #BlocActivités a {
     text-decoration: none;
-    color: black;
+    color: black;    
 }
 
 
@@ -23,47 +23,22 @@
     margin-top: 19px;
 }
 
-.BlocActivité {
+.CardActivités {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    height: 100%;
+    height: 444px;
     width: 22.44%;
     border-radius: 20px 20px 20px 20px;
     box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.1);
 }
 
-#BlocImageVieuxPort {
-    height: 390px;
-    width: 100%;
-    background-image: url(/Images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg);
-    background-position: center center;
-    border-radius: 20px 20px 0 0;
-}
-
-#BlocImagePomègues {
-    height: 390px;
-    width: 100%;
-    background-image: url(/Images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg);
-    background-position: center center;
-    border-radius: 20px 20px 0 0;
-}
-
-#BlocImageCalanques {
-    height: 390px;
-    width: 100%;
-    background-image: url(/Images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg);
-    background-position: center center;
-    border-radius: 20px 20px 0 0;
-}
-
-#BlocImageGarde {
-    height: 390px;
-    width: 100%;
-    background-image: url(/Images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg);
-    background-position: center center;
-    background-size: auto 100%;
-    border-radius: 20px 20px 0 0;
+.PhotoActivité img{
+    display: flex;
+    height: 389px;    
+    object-fit: cover;
+    border-radius: 20px 20px 0px 0px;
+    border: 5px solid #FFFFFF;
 }
 
 
@@ -89,40 +64,19 @@
         height: 267px;
     }
 
-    .BlocActivité {
-        height: auto;
+    .CardActivités {
+        height:auto;
         width: 182px;
     }
 
-    #BlocImageVieuxPort {
+    .PhotoActivité img {
         height: 211px;
-        background-size: auto 125%;
-        background-position: 50% 0%;
     }
 
-    #BlocImagePomègues {
-        height: 211px;
-        background-size: 125% auto;
-        background-position: 50% 40%;
-    }
-
-
-    #BlocImageCalanques {
-        height: 211px;
-        background-size: auto 125%;
-        background-position: 50% 0%;
-    }
-
-
-    #BlocImageGarde {
-        height: 211px;
-        background-size: auto 125%;
-        background-position: 50% 0%;
-    }
-
-    .NomRésultat {
-        height: 21%;
-
+    .NomRésultat { 
+        height: 56px;
+        margin-right: 20px;
+    
     }
 }
 
@@ -144,41 +98,20 @@
         height: auto;
     }
 
-    .BlocActivité {
+    .CardActivités{
         width: 89%;
+        height: 190px;
         margin-bottom: 20px;
     }
-
-    .BlocActivité a {
+    .CardActivités a {
         height: 100%;
         width: 100%;
-
+        
     }
 
-    #BlocImageVieuxPort {
+    .PhotoActivité img {
         height: 134px;
-        background-size: 100% auto;
-        background-position: 50% 15%;
-    }
-
-    #BlocImagePomègues {
-        height: 134px;
-        background-size: 100% auto;
-        background-position: 50% 42%;
-    }
-
-
-    #BlocImageCalanques {
-        height: 134px;
-        background-size: 100% auto;
-        background-position: 50% 15%;
-    }
-
-
-    #BlocImageGarde {
-        height: 134px;
-        background-size: 100% auto;
-        background-position: 50% 15%;
+        object-position: 50% 30%;
     }
 
     .NomRésultat {
